# spell-checker

./: .gitignore  README.md  dictionary.py  main.py  pyproject.toml  setup.cfg  spellchecker.py  test_spellchecker.py  utils.py
.github/workflows/: python-publish.yml
spell_checker/: dictionary.py  main.py  spellchecker.py  utils.py
tests/: test_spellchecker.py
