[project]
name = "spell_checker_KERMSHAD"
version = "0.0.2"
authors = [
  { name="Mehrshad Firouzian", email="mrfirouz007@gmail.com" },
]
description = "Spell checker library"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL v3 License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
