[project]
name = "spell_checker_KERMSHAD"
version = "0.1.1"
authors = [
  { name="Mehrshad Firouzian", email="mrfirouz007@gmail.com" },
]
description = "Spell checker library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/KH4St3H/spell-checker"
Issues = "https://github.com/KH4St3H/spell-checker/issues"

[tool.pytest.ini_options]
testpaths = "tests"  # directory containing your tests
