[metadata]
name = spell_checker
version = 0.0.2
author = Kermshad
author_email = mrfirouz007@gmail.com
description = Spell check and correction library
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
include_package_data = True
packages = find:

[options.packages.find]
include = spell_checker

[options.package_data]
spell_checker = dictionaries/*
